--- a/practice1/js/styles.css
+++ b/practice1/js/styles.css
@@ -1,3 +1,9 @@
+html {
+	background:#d9d9d9;
+}
+header {
+	padding: 20px,0px,20px,0px;
+}
 #top-nav {
 	float: right;
 	margin: 1% 10% 0% 0%;
@@ -8,23 +14,36 @@
 	display: inline;
 	padding: 10px;
   margin-bottom: 10px;
+	background: white;
+}
+#top-nav a: hover,
+#top-nav a: focus,
+#top-nav a: active {
+	background: white;
+	color: black;
 }
 h1 {
   font-size: 48px;
   font-family:sans-serif;
   text-align: center;
+	background: white;
+	padding: 30px;
+	border: 30px;
+	position: fixed:;
 }
+
 .article-thumbs	{
 	text-align: center;
 	clear:both;
 }
 .article-thumbs img {
 	border: 50%;
-	max-width: 200px;
-  padding: 20px;
+	max-width: 175px;
+	padding: 5px;
 }
-header img {
-  width:100%;
+main img {
+  width:90%;
+	padding:20px;
 }
 nav ul {
 	list-style-type: none;
@@ -40,12 +59,13 @@ html {
   margin-right: 10px;
 }
 #secondary-nav {
-text-align:center;
+text-align:inline;
 margin: 1% 10% 0% 0%;
 font-family:sans-serif;
+background: white;
 }
 #secondary-nav ul li {
   display: inline;
-  padding: 80px;
-  margin-bottom: 10px;
+  padding: 10px;
+  margin-bottom: 40px;
 }
